Use lighter color and fix jumping ALSO: Simplify code

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -5,14 +5,7 @@
 	margin-bottom: 22px;
   }
   .carousel_ns > input {
-	clip: rect(1px, 1px, 1px, 1px);
-	clip-path: inset(50%);
-	height: 1px;
-	width: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
+	display: none;
   }
   
   .carousel__ns__slides {
